[package]
name = "adnow_lunch_bot"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
shuttle-runtime = "0.43.0"
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.81"
shuttle-persist = "0.43.0"
