[package]
name = "adnow_lunch_bot"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
shuttle-runtime = "0.46.0"
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
anyhow = { version = "1.0.81", features = ["backtrace"] }
shuttle-persist = "0.46.0"
rand = "0.8.5"
serde = "1.0.203"
serde_json = "1.0.117"
axum = "0.7.5"
shuttle-axum = "0.46.0"
